Revert "ios overflow:hidden bug 7"
This reverts commit 0e78bddd87dc17238bb7d7be25e7016523e7fc06.

--- a/main.scss
+++ b/main.scss
@@ -142,7 +142,7 @@ $warning: #3edc99;
     margin-top: 165px;
     margin-bottom: -35px;
     margin-left: 10%;
-    will-change: transform;
+    will-change: auto;
   }
 
   .dot-container {
